--- a/css/style.css
+++ b/css/style.css
@@ -954,9 +954,13 @@ form label {
 .gtco-heading-organisation {
 	margin-bottom: 0;
 }
-.gtco-heading-partners {
-	margin-bottom: 0;
-	color: #00FF00;
+.gtco-heading-partners h2{
+	 font-size: 40px;
+	margin-bottom: 10px;
+	line-height: 1.5;
+  color: #A9A9A9;
+  font-weight: 300;
+	
 }
 .gtco-heading.gtco-heading-sm {
   margin-bottom: 2em;
