--- a/css/style.css
+++ b/css/style.css
@@ -1351,9 +1351,9 @@ form label {
 }
 
 .btn-special {
-  background: #00ffa3;
-  color: #239c71;
-  border: 2px solid #00ffa3;
+  background: #87CEEB;
+  color: #1E90FF;
+  border: 2px solid #87CEEB;
 }
 .btn-special:hover, .btn-special:focus, .btn-special:active {
   color: #239c71;
