--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,6 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .gtco-cover {
-  height: 900px;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -322,9 +321,8 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .gtco-cover {
-    height: 600px;
     height: inherit !important;
-    padding: 3em 0;
+    margin: 3em 0;
   }
 }
 .gtco-cover .display-t,
