--- a/css/style.css
+++ b/css/style.css
@@ -1208,8 +1208,8 @@ form label {
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
-  font-family: "Raleway", Arial, sans-serif;
-  font-size: 13px;
+  font-family: "RalewayBold", Arial, sans-serif;
+  font-size: 20px;
   font-weight: 700 !important;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -1219,7 +1219,7 @@ form label {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
-  padding: 20px 30px;
+  padding: 30px 45px;
   text-transform: uppercase;
   text-shadow: none !important;
   -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
