--- a/css/style.css
+++ b/css/style.css
@@ -1291,6 +1291,7 @@ form label {
 }
 
 .btn-warning {
+  padding: 35px 30px !important;
   background: #f0ad4e;
   color: #fff;
   border: 2px solid #f0ad4e;
