--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -366,6 +366,9 @@ img {
 }
 
 .img-responsive {
+	vertical-align: middle;
+	margin:  0 auto;
+text-align: center;
   display: block;
   max-width: 100%;
   height: auto;
@@ -5962,6 +5965,7 @@ button.close {
 .center-block {
   display: block;
   margin-left: auto;
+  margin-right: auto;
   margin-right: auto;
 }
 
