--- a/css/style.css
+++ b/css/style.css
@@ -1975,7 +1975,7 @@ body { padding: 0; margin: 0; width: 100%; min-height: 100vh; }
    .background { 
 				width: 100%; height: calc(100vh + (-51px)); 
                 background-color: #84caef;
-				background-image: url('../images/back.png'); 
+				background-image: url('../images/background.jpg'); 
 				background-size: 100%  ; 
 				
 				background-repeat: no-repeat; 
@@ -1995,7 +1995,14 @@ body { padding: 0; margin: 0; width: 100%; min-height: 100vh; }
 .partners{
   position:relative;
 }
-
+.partners_yazaki_fix{
+	 display: inline-block;
+  width: auto;
+  max-height:250px;
+  max-width:300px;
+  height:auto;
+  margin: 30px 50px 30px 60px;
+}
 .partners_1{
   display: inline-block;
   width: auto;
